// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input /> renders correctly 1`] = `
<input
  className="wrapper "
  data-testid="input"
  placeholder=""
/>
`;

exports[`<Input /> should render a input with placeholder 1`] = `
<input
  className="wrapper "
  data-testid="input"
  placeholder="Exemple"
/>
`;
